Chaning JAVA_OPTS for container through external env.sh file.